<resources>
    <string name="app_name">World-Changing Kids</string>
    <string name="app_title_bar">World-Changing Kids</string>
    <string name="button">Done</string>
    <string name="good_deed_message">Choose an Act of Kindness to Perform</string>
    <string name="main_activity_profile_name">Hi, %s</string>
    <string name="login_username_title">Login:</string>
    <string name="login_title">Welcome</string>
    <string name="login_password_title">Password:</string>
    <string name="login_name_placeholder">Enter your email</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="create_user_button">Create new user</string>
    <string name="create_account_dialog_title">Create New Account</string>
    <string name="account_exists_message">Login already exists</string>
    <string name="login_failed_message">Login or password does not match</string>
    <string name="user_ForgotPassword">Forgot password?</string>
    <string name="select_profile_title">Who\'s Changing the World?</string>
    <string name="instructions">You currently have no children.
        <br /> To add children please click on the yellow add button
    </string>
    <string name="create_account_title">Create Account</string>
    <string name="user_first_name_placeholder">First Name</string>
    <string name="user_last_name_placeholder">Last Name</string>
    <string name="create_account_username">Email</string>
    <string name="create_account_password">Password</string>
    <string name="create_button">Create</string>
    <string name="error_title_wrong_action">Maybe you clicked the wrong button ?</string>
    <string name="error_message">You are already on the main menu screen</string>
    <string name="user_level">Level</string>
    <string name="level_legendary">Legendary</string>
    <string name="user_name">Name :</string>
    <string name="user_name_placeholder">Full Name</string>
    <string name="user_age">Age:</string>
    <string name="user_age_placeholder">Age</string>
    <string name="user_grade">Grade:</string>
    <string name="user_grade_placeholder">Grade</string>
    <string name="user_about_info">About:</string>
    <string name="user_about_placeholder">Tell Me About yourself</string>
    <string name="completed_task">Completed Task</string>
    <string name="avatar_pants_title">Pants</string>
    <string name="avatar_shirt_title">Shirt</string>
    <string name="avatar_head_title">Head</string>
    <string name="avatar_all_title">All</string>
    <string name="avatar_save_button">Save Avatar</string>
    <string name="community_filter">Community</string>
    <string name="cooking_filter">Cooking</string>
    <string name="art_filter">Art</string>
    <string name="family_filter">Family</string>
    <string name="giving_filter">Giving</string>
    <string name="completed_filter">Acts Completed</string>
    <string name="act_completed_message">Congratulations you have completed this Act of Kindness.</string>
    <string name="audio_error_exception">Error on record</string>
    <string name="label_view_act">View Act</string>
    <string name="aok_list_item_title">#%d %s</string>
    <string name="aok_details_item_title">Act #%d %s</string>
    <string name="aok_details_notes_hint">Notes</string>
    <string name="create_child_account">About You</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="grade">Grade</string>
    <string name="savebtn">Save</string>
    <string name="edit_profile">Profile Information</string>
    <string name="editbtn">Edit</string>
    <string name="placeholder_short">LOREM IPSUM</string>
    <string name="placeholder_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="placeholder_long_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="noteToAdultsTitle">  For the adults who love and support this App</string>
</resources>